@@ -31,12 +31,21 @@ dependencies {
     implementation 'org.yaml:snakeyaml:1.33'
 
     testImplementation files("$buildDir/classes/jasm/test")
+    testImplementation 'org.mockito:mockito-core:4.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+            '--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
+            '--add-exports', 'java.base/jdk.internal.util=ALL-UNNAMED'
+    ]
 }
 
 test {
     useJUnitPlatform()
 }
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
